# ddgs-mcp-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py
src/ddgs_mcp_server/: main.py  server.py
