[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddgs-mcp-server"
version = "0.5.0"
description = "DuckDuckGo Search MCP Server with full page content extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "ddgs>=9.10.0",
    "trafilatura>=2.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
ddgs-mcp-server = "ddgs_mcp_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ddgs_mcp_server"]
